// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RevealPrivateCredential snapshots renders introduction screen correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "paddingBottom": 16,
      },
      undefined,
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        {
          "marginTop": 0,
        },
        undefined,
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 8,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              },
              undefined,
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="reveal-credential-back-button"
        >
          <SvgMock
            fill="currentColor"
            name="ArrowLeft"
            style={
              [
                {
                  "color": "#131416",
                  "height": 24,
                  "width": 24,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Bold",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Reveal Secret Recovery Phrase
        </Text>
      </View>
    </View>
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
  </View>
  <View
    alignItems="center"
    flexDirection="column"
    justifyContent="space-between"
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingBottom": 24,
          "paddingHorizontal": 16,
          "paddingTop": 32,
        },
      ]
    }
    testID="export-credentials-container"
  >
    <View
      alignItems="center"
      flexDirection="column"
      justifyContent="center"
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 184,
            "width": 205,
          }
        }
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#66676a",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "marginTop": 24,
          }
        }
      >
        To reveal your Secret Recovery Phrase, you need to correctly answer two questions
      </Text>
    </View>
    <View
      alignItems="center"
      flexDirection="column"
      gap={16}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "gap": 16,
          },
          {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "flex-end",
            "width": "100%",
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
            "textAlign": "center",
            "width": "100%",
          }
        }
        testID="quiz-get-started-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Get started
        </Text>
      </TouchableOpacity>
      <Text
        accessibilityRole="link"
        accessible={true}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "backgroundColor": "transparent",
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
            "width": "100%",
          }
        }
        suppressHighlighting={true}
        testID="export-credentials-learn-more-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#4459ff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Learn more
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`RevealPrivateCredential snapshots renders password entry screen correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "paddingBottom": 16,
      },
      undefined,
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        {
          "marginTop": 0,
        },
        undefined,
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 8,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              },
              undefined,
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="reveal-credential-back-button"
        >
          <SvgMock
            fill="currentColor"
            name="ArrowLeft"
            style={
              [
                {
                  "color": "#131416",
                  "height": 24,
                  "width": 24,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Bold",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Reveal Secret Recovery Phrase
        </Text>
      </View>
    </View>
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={40}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={false}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "display": "flex",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "display": "flex",
                  "paddingBottom": 0,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 20,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              Your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                Secret Recovery Phrase
              </Text>
               
              gives
               
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#66676a",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                full access to your wallet, funds and accounts.
              </Text>
            </Text>
            <View
              style={
                [
                  {
                    "display": "flex",
                  },
                  undefined,
                ]
              }
              testID="seed-phrase-warning"
            >
              <View
                style={
                  {
                    "backgroundColor": "#ca35421a",
                    "borderColor": "#ca3542",
                    "borderLeftWidth": 4,
                    "borderRadius": 4,
                    "flexDirection": "row",
                    "fontSize": 14,
                    "marginTop": 24,
                    "padding": 12,
                    "paddingLeft": 8,
                  }
                }
                testID="banneralert"
                variant="Alert"
              >
                <View
                  style={
                    {
                      "marginRight": 8,
                    }
                  }
                >
                  <SvgMock
                    color="#ca3542"
                    fill="currentColor"
                    height={24}
                    name="Danger"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      [
                        {
                          "color": "#131416",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 14,
                          "fontWeight": 400,
                          "letterSpacing": 0,
                          "lineHeight": 22,
                        },
                        undefined,
                      ]
                    }
                  >
                    Make sure nobody is looking at your screen. MetaMask Support will never ask for this.
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                  "paddingBottom": 0,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 20,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#131416",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginBottom": 4,
                }
              }
            >
              Enter password to continue
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "#b4b4b566",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                }
              }
              testID="textfield"
            >
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoComplete="password"
                  autoFocus={false}
                  editable={true}
                  keyboardAppearance="light"
                  multiline={false}
                  numberOfLines={1}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="Password"
                  placeholderTextColor="#babbbe"
                  returnKeyType="done"
                  secureTextEntry={true}
                  style={
                    {
                      "backgroundColor": "inherit",
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "#131416",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "height": 46,
                      "letterSpacing": 0,
                      "lineHeight": 0,
                      "opacity": 1,
                    }
                  }
                  testID="private-credential-password-text-input"
                />
              </View>
              <View
                style={
                  {
                    "marginLeft": 12,
                  }
                }
                testID="textfield-endacccessory"
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderRadius": 8,
                        "height": 32,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 32,
                      },
                      undefined,
                      {
                        "transform": [
                          {
                            "scale": 1,
                          },
                        ],
                      },
                    ]
                  }
                  testID="button-icon"
                >
                  <SvgMock
                    fill="currentColor"
                    name="EyeSlash"
                    style={
                      [
                        {
                          "color": "#131416",
                          "height": 24,
                          "width": 24,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ca3542",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginTop": 10,
                }
              }
              testID="password-warning"
            />
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "gap": 16,
            "paddingBottom": 16,
            "paddingHorizontal": 16,
            "paddingTop": 24,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={true}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#131416",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="reveal-private-credential-next-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Next
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`RevealPrivateCredential snapshots renders unlocked SRP view correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "paddingBottom": 16,
      },
      undefined,
    ]
  }
  testID="reveal-private-credential-screen"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "minHeight": 56,
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        {
          "marginTop": 0,
        },
        undefined,
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 8,
                "height": 32,
                "justifyContent": "center",
                "opacity": 1,
                "width": 32,
              },
              undefined,
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="reveal-credential-back-button"
        >
          <SvgMock
            fill="currentColor"
            name="ArrowLeft"
            style={
              [
                {
                  "color": "#131416",
                  "height": 24,
                  "width": 24,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Bold",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Reveal Secret Recovery Phrase
        </Text>
      </View>
    </View>
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentInset={
        {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={40}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardShouldPersistTaps="never"
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      resetScrollToCoords={
        {
          "x": 0,
          "y": 0,
        }
      }
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={false}
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
      testID="reveal-credential-scroll"
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "display": "flex",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "display": "flex",
                  "paddingBottom": 0,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 20,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              Your Secret Recovery Phrase gives full access to your wallet. Do not share it with anyone.
            </Text>
          </View>
          <View
            style={
              {
                "paddingHorizontal": 16,
              }
            }
          >
            <ScrollableTabView
              onChangeTab={[Function]}
              renderTabBar={[Function]}
              style={
                {
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "marginBottom": 0,
                  "minHeight": 0,
                }
              }
            >
              <RCTScrollView
                tabLabel="Text"
                testID="tab-scroll-view-text"
              >
                <View>
                  <View
                    style={
                      {
                        "flex": 1,
                        "height": "100%",
                        "marginTop": 16,
                        "minHeight": 232,
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "borderRadius": 8,
                          "flex": 1,
                        }
                      }
                    >
                      <TouchableOpacity
                        onPress={[Function]}
                        style={
                          {
                            "borderRadius": 8,
                            "bottom": 0,
                            "flex": 1,
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                        }
                        testID="reveal-credential-button"
                      >
                        <View
                          accessibilityIgnoresInvertColors={true}
                          style={
                            {
                              "borderRadius": 8,
                              "bottom": 0,
                              "flex": 1,
                              "height": "100%",
                              "left": 0,
                              "opacity": 0.5,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                            }
                          }
                        >
                          <Image
                            resizeMode="cover"
                            source={1}
                            style={
                              [
                                {
                                  "bottom": 0,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                                {
                                  "height": "100%",
                                  "width": undefined,
                                },
                                undefined,
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "borderRadius": 8,
                              "flex": 1,
                              "flexDirection": "column",
                              "height": "100%",
                              "justifyContent": "center",
                              "paddingHorizontal": 24,
                              "paddingVertical": 45,
                              "rowGap": 16,
                            }
                          }
                        >
                          <SvgMock
                            fill="currentColor"
                            name="EyeSlash"
                            style={
                              [
                                {
                                  "color": "#131416",
                                  "height": 32,
                                  "width": 32,
                                },
                                undefined,
                              ]
                            }
                          />
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#131416",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Tap to reveal
                          </Text>
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#131416",
                                "fontFamily": "Geist-Regular",
                                "fontSize": 14,
                                "letterSpacing": 0,
                                "lineHeight": 22,
                              }
                            }
                          >
                            Make sure no one is watching your screen.
                          </Text>
                        </View>
                      </TouchableOpacity>
                    </View>
                  </View>
                </View>
              </RCTScrollView>
              <RCTScrollView
                tabLabel="QR code"
                testID="tab-scroll-view-qr-code"
              >
                <View>
                  <View
                    style={
                      {
                        "alignSelf": "center",
                        "justifyContent": "center",
                        "marginTop": 16,
                      }
                    }
                    testID="reveal-credential-qr-code-image"
                  >
                    <QRCode
                      backgroundColor="#ffffff"
                      color="#131416"
                      logo={1}
                      logoSize={50}
                      size={550}
                      value="word1 word2 word3 word4"
                    />
                  </View>
                </View>
              </RCTScrollView>
            </ScrollableTabView>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "gap": 16,
            "paddingBottom": 16,
            "paddingHorizontal": 16,
            "paddingTop": 24,
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#b4b4b528",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="reveal-private-credential-cancel-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#131416",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Done
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
